* nb_NO: Updated some Norwegian translations and added one for Xfmedia * pt_PT: Added European Portuguese translations * Changed my email address
(Old svn revision: 25797)

--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,17 +1,17 @@
-2007-02-04  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-04  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed the credits string.
 
-2007-01-18  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-18  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Minor changes to the French translation.
 
-2006-11-19  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Added Brazilian translation and updated LINGUAS
 	by Gunther Furtado <gunzera0@yahoo.com.br>
 
-2006-10-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-10-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Added French translation and updated LINGUAS.
 
