--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -513,11 +513,11 @@ msgstr "  --build-list      Parse (navn, fil) par\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr ""
+msgstr "  --strip-comments  Fjern kommentarer fra XML filer\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr ""
+msgstr "  --strip-content   Fjern nodeinnhold fra XML filer\n"
 
 #: ../exo-csource/main.c:303 ../exo-desktop-item-edit/main.c:153
 #: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:167
@@ -1355,7 +1355,6 @@ msgstr ""
 "  -v, --version                       Skriv ut versjonsinformasjon og avslutt"
 
 #: ../exo-open/main.c:65
-#, fuzzy
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
 "                                      TYPE with the optional PARAMETERs, "
