--- a/po-doc/fr.po
+++ b/po-doc/fr.po
@@ -1,14 +1,14 @@
 # French translation of the manual from the libexo package.
 # Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
-# Maximilian Schleiss <maxschleiss@solnet.ch>, 2006-2007.
+# Maximilian Schleiss <maximilian@xfce.org>, 2006-2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: libexo\n"
 "POT-Creation-Date: 2006-05-05 02:50+0900\n"
 "PO-Revision-Date: 2007-02-01 23:51+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@solnet.ch>\n"
+"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -217,4 +217,4 @@ msgstr "You should have received a copy of the GNU General Public License along 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:0(None)
 msgid "translator-credits"
-msgstr "Maximilian Schleiss <maxschleiss@solnet.ch>, 2006, 2007."
+msgstr "Maximilian Schleiss <maximilian@xfce.org>, 2006, 2007."
