* en_GB.po: British English translations updated for trunk * ka.po: Georgian translation update for Xfce 4.4 * nl.po: Updated xfcalendar's Dutch translation for Xfce 4.4
(Old svn revision: 25824)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* en_GB: British English translation updated
+	by Jeff Bailes <thepizzaking@gmail.com>
+
 2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
