--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2007-06-20  Piarres Beobide <pi@beobide.net>
+	* eu.po: Basque translation update
+
 2007-06-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB: British English translation updated
