* no_NO.po: Norwegian Bokmal translation update for the xfburn package * pt_PT.po: European Portuguese translation update for some packages in trunk * ka.po: Georgian translation update for the xfce-mcs-manager package (4.4)
(Old svn revision: 25866)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,10 @@
+2007-06-27  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_PTpo: European Portuguese translation added
+	by Nuno Miguel <nunis@netcabo.pt>
+
 2007-06-20  Piarres Beobide <pi@beobide.net>
+
 	* eu.po: Basque translation update
 
 2007-06-20  Maximilian Schleiss <maximilian@xfce.org>
