2007-07-20	Benedikt Meurer <benny@xfce.org>
	* exo/exo-mount-point.c: Fix build on Solaris.




(Old svn revision: 25931)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-20	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-mount-point.c: Fix build on Solaris.
+
 2007-05-22	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, exo/exo-string.{c,h}, exo/exo.symbols: Add new
