--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -1310,7 +1310,7 @@ msgstr "Enheten \"%s\" løses nå ut. Dette kan ta litt tid."
 #. read-only, just unmounting
 #: ../exo-mount-notify/main.c:230
 msgid "Unmounting device"
-msgstr "Demontere enhet"
+msgstr "Demonterer enhet"
 
 #: ../exo-mount-notify/main.c:231
 #, c-format
@@ -1324,7 +1324,7 @@ msgstr ""
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:238
 msgid "Writing data to device"
-msgstr "Skirver data til enheten"
+msgstr "Skriver data til enheten"
 
 #: ../exo-mount-notify/main.c:239
 #, c-format
@@ -1332,7 +1332,7 @@ msgid ""
 "There is data that needs to be written to the device \"%s\" before it can be "
 "removed. Please do not remove the media or disconnect the drive."
 msgstr ""
-"Date må skrives til enheten \"%s\" før den kan frakobles. Ikke frakoble "
+"Data må skrives til enheten \"%s\" før den kan frakobles. Ikke frakoble "
 "mediet eller fjern enheten"
 
 #: ../exo-open/main.c:59
