Updated Finnish translations.
(Old svn revision: 26049)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-05  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-08-29  Mike Massonnet <mmassonnet@xfce.org>
 
 	* nb_NO.po: Update translations
