2007-09-17  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
	* be.po: Updated Belarusian translation



(Old svn revision: 26081)

--- a/po/be.po
+++ b/po/be.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-04-05 15:32+0300\n"
+"PO-Revision-Date: 2007-09-17 04:28+0300\n"
 "Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
@@ -511,11 +511,11 @@ msgstr "  --build-list      Аналіз пар (назва, файл)\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr ""
+msgstr "  --strip-comments  Выдаліць камэнтары з XML-файлаў\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr ""
+msgstr "  --strip-content   Выдаліць зьмесьціва з XML-файлаў\n"
 
 #: ../exo-csource/main.c:303 ../exo-desktop-item-edit/main.c:153
 #: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:167
