--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-17  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
+
+	* be.po: Updated Belarusian translation
+
 2007-09-05  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
