--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-06  Mike Massonnet <mmassonnet@xfce.org>
+
+	* lv.po: Add translations by RPrieditis <RPrieditis@inbox.lv>
+
 2007-09-17  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian translation
