--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-29  Stephan Arts <stephan@xfce.org>
+
+	* nl.po: Update dutch translation (thanks to Peter Maassen)
+
 2007-10-06  Mike Massonnet <mmassonnet@xfce.org>
 
 	* lv.po: Add translations by RPrieditis <RPrieditis@inbox.lv>
