Updated Brazilian Portuguese translation by Og Maciel <ogmaciel@gnome.org>
(Old svn revision: 26245)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-03 Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR: Updated Brazilian Portuguese translation by Og Maciel <ogmaciel@gnome.org>
+
 2007-10-29  Stephan Arts <stephan@xfce.org>
 
 	* nl.po: Update dutch translation (thanks to Peter Maassen)
