Update fr translation
(Old svn revision: 26259)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-05	Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Update translation
+
 2007-11-03 Og Maciel <ogmaciel@gnome.org>
 
     * pt_BR: Updated Brazilian Portuguese translation by Og Maciel <ogmaciel@gnome.org>
