--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-06-05 00:12+0100\n"
-"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
+"PO-Revision-Date: 2007-10-31 18:23+0100\n"
+"Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -519,11 +519,11 @@ msgstr "  --build-list      Analyser les paires (nom, fichier)\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr "  --strip-comments  Supprimer les commentaires des fichiers XML\n"
+msgstr "  --strip-comments  Supprimer les commentaires XML\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr ""
+msgstr "  --strip-content   Supprimer le contenu des nœuds XML\n"
 
 #: ../exo-csource/main.c:303
 #: ../exo-desktop-item-edit/main.c:153
