--- a/po/lv.po
+++ b/po/lv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-10-06 16:53+0300\n"
+"PO-Revision-Date: 2007-10-28 14:41+0300\n"
 "Last-Translator: Rihards Priedītis <rprieditis@inbox.lv>\n"
 "Language-Team: Latvian <rprieditis@inbox.lv>\n"
 "MIME-Version: 1.0\n"
@@ -18,12 +18,12 @@ msgstr ""
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
 msgid "Follow state"
-msgstr "Sekošanas režīms"
+msgstr "Seko stāvoklim"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:146
 msgid "Render differently based on the selection state."
-msgstr "Attēlot balstoties uz režīmu."
+msgstr "Attēlot atkarībā no stāvokļa."
 
 #: ../exo/exo-cell-renderer-icon.c:167
 msgid "Icon"
@@ -94,7 +94,7 @@ msgstr "Ikonu Joslas Modelis"
 
 #: ../exo/exo-icon-bar.c:296
 msgid "Model for the icon bar"
-msgstr "Modelis priekš ikonu joslas"
+msgstr "Modelis ikonu joslai"
 
 #: ../exo/exo-icon-bar.c:312
 msgid "Active"
@@ -152,7 +152,7 @@ msgstr "Lietotņu Ikonas"
 #. EXO_ICON_CHOOSER_CONTEXT_CATEGORIES
 #: ../exo/exo-icon-chooser-dialog.c:91
 msgid "Menu Icons"
-msgstr "Izvēlnes Ikonas"
+msgstr "Izvēlņu Ikonas"
 
 #. EXO_ICON_CHOOSER_CONTEXT_DEVICES
 #: ../exo/exo-icon-chooser-dialog.c:93
@@ -192,7 +192,7 @@ msgstr "Statusa Ikonas"
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
 msgid "Uncategorized Icons"
-msgstr "Citas Ikonas"
+msgstr "Pārējās Ikonas"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ALL
 #: ../exo/exo-icon-chooser-dialog.c:111
@@ -203,7 +203,7 @@ msgstr "Visas Ikonas"
 #: ../exo/exo-icon-chooser-dialog.c:115
 #: ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
-msgstr "Attēli"
+msgstr "Attēlu Faili"
 
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
@@ -216,7 +216,7 @@ msgstr "Kolonnu Atkāpe"
 
 #: ../exo/exo-icon-view.c:652
 msgid "Space which is inserted between grid column"
-msgstr "Atstarpe, kuru ievieto starp kolonnām"
+msgstr "Atstarpe, kuru ievieto starp režģa kolonnām"
 
 #: ../exo/exo-icon-view.c:668
 msgid "Number of columns"
@@ -256,7 +256,7 @@ msgstr "Piemale"
 
 #: ../exo/exo-icon-view.c:738
 msgid "Space which is inserted at the edges of the icon view"
-msgstr "Ikona skata malu atstarpe"
+msgstr "Atstarpe, kuru ievieto gar ikona skata malām"
 
 #: ../exo/exo-icon-view.c:754
 msgid "Markup column"
@@ -272,7 +272,7 @@ msgstr "Ikonu Skata Modelis"
 
 #: ../exo/exo-icon-view.c:770
 msgid "The model for the icon view"
-msgstr "Modelis priekš ikonu skata"
+msgstr "Modelis ikonu skatam"
 
 #: ../exo/exo-icon-view.c:784
 msgid "How the text and icon of each item are positioned relative to each other"
@@ -300,7 +300,7 @@ msgstr "Meklēšanas Kolonna"
 
 #: ../exo/exo-icon-view.c:848
 msgid "Model column to search through when searching through item"
-msgstr "Modeļa kolonna meklēšanai, kad meklē caur vienumiem"
+msgstr "Modeļa kolonna meklēšanai, kad meklē vienumos"
 
 #: ../exo/exo-icon-view.c:862
 msgid "Selection mode"
@@ -348,7 +348,7 @@ msgstr "Atlases lodziņa krāsa"
 
 #: ../exo/exo-icon-view.c:942
 msgid "Selection Box Alpha"
-msgstr "Atlases Lodziņā Alfa"
+msgstr "Atlases Lodziņa Alfa"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Opacity of the selection box"
@@ -361,7 +361,7 @@ msgstr "Priekšskatījums"
 #: ../exo/exo-thumbnail-preview.c:139
 #: ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
-msgstr "Fails nav atlasīts"
+msgstr "Neviens fails nav atlasīts"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
@@ -389,7 +389,7 @@ msgstr "_Pievienot jaunu rīkjoslu"
 
 #: ../exo/exo-toolbars-editor.c:230
 msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Velciet vienumu uz augšējās rīkjoslas, lai pievienotu, vai no rīkjoslas, uz vienumu tabulu, lai aizvāktu."
+msgstr "Velciet vienumu uz augšējām rīkjoslām, lai pievienotu, vai no rīkjoslām, uz vienumu tabulas, lai aizvāktu."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -476,11 +476,11 @@ msgstr "Logu grupas līderis"
 
 #: ../exo/exo-xsession-client.c:154
 msgid "Restart command"
-msgstr "Restarta kommanda"
+msgstr "Restarta komanda"
 
 #: ../exo/exo-xsession-client.c:155
 msgid "Session restart command"
-msgstr "Sesijas restarta kommanda"
+msgstr "Sesijas restarta komanda"
 
 #: ../exo-csource/main.c:283
 #, c-format
@@ -494,7 +494,7 @@ msgstr "       %s [opcijas] --build-list [[faila nosaukums]...]\n"
 
 #: ../exo-csource/main.c:286
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr "  -h, --help        Izdrukā šo ziņu un iziet\n"
+msgstr "  -h, --help         Izdrukā šo ziņu un iziet\n"
 
 #: ../exo-csource/main.c:287
 msgid "  -v, --version     Print version information and exit\n"
@@ -502,11 +502,11 @@ msgstr "  -v, --version     Izdrukā versijas informāciju un iziet\n"
 
 #: ../exo-csource/main.c:288
 msgid "  --extern          Generate extern symbols\n"
-msgstr "  --extern          Ģenerē ārējos simbolus\n"
+msgstr "  --extern          Radīt ārējos simbolus\n"
 
 #: ../exo-csource/main.c:289
 msgid "  --static          Generate static symbols\n"
-msgstr "  --static          Ģenerē statiskos simbolus\n"
+msgstr "  --static           Radīit statiskos simbolus\n"
 
 #: ../exo-csource/main.c:290
 msgid "  --name=identifier C macro/variable name\n"
@@ -624,7 +624,7 @@ msgstr "K_omentārs:"
 #. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:354
 msgid "Comm_and:"
-msgstr "Komm_anda:"
+msgstr "Kom_anda:"
 
 #. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:371
@@ -656,18 +656,18 @@ msgstr "Izmantot _sāknēšanas paziņošanu"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Izvēlaties šo opciju, lai iespējotu sāknēšanas paziņošanu, kad kommanda tiek palaista no failu pārvaldnieka, vai izvēlnes. Ne visas lietotnes atbalsta sāknēšanas paziņošanu."
+msgstr "Izvēlaties šo opciju, lai iespējotu sāknēšanas paziņošanu, kad komanda tiek palaista no failu pārvaldnieka, vai izvēlnes. Ne visas lietotnes atbalsta sāknēšanas paziņošanu."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:443
 msgid "Run in _terminal"
-msgstr "Palaist _terminālī"
+msgstr "Izpildīt _terminālī"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
-msgstr "Izvēlaties, šo opciju, ja vēlaties, lai kommanda tiek izpildīta termināļa logā"
+msgstr "Izvēlaties, šo opciju, ja vēlaties, lai komanda tiek izpildīta termināļa logā"
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
@@ -709,7 +709,7 @@ msgstr "Noklusētais komentārs, kad veido darbavirsmas failu"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
-msgstr "Noklusētais kommanda, kad veido palaidēju"
+msgstr "Noklusētā komanda, kad veido palaidēju"
 
 #: ../exo-desktop-item-edit/main.c:77
 msgid "Preset URL when creating a link"
@@ -738,13 +738,13 @@ msgstr "Neizdevās atvērt displeju"
 
 #: ../exo-desktop-item-edit/main.c:168
 msgid "No file/folder specified"
-msgstr "Nav norādits fails/mape"
+msgstr "Nav norādīts fails/mape"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:226
 #, c-format
 msgid "Unsupported desktop file type \"%s\""
-msgstr "Darbavirsmas fails tips \"%s\" netiek atbalstīts "
+msgstr "Darbavirsmas faila tips \"%s\" netiek atbalstīts "
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:246
@@ -861,7 +861,7 @@ msgstr "Vēlamās Lietotnes"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr "Norādiet vēlamās lietotnes, dažādiem pakalpojumiem"
+msgstr "Norādiet noklusētās lietotnes, dažādiem pakalpojumiem"
 
 #.
 #. Internet
@@ -872,15 +872,15 @@ msgstr "Internets"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:138
 msgid "Web Browser"
-msgstr "Tīkla Pārlūks"
+msgstr "Tīmekļa Pārlūks"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Vēlamais Tīkla Pārlūks, kurš tiks izmantots, lai\n"
-"vērtu hipersaites un atēlotu palīdzibas saturu."
+"Vēlamais Tīmekļa Pārlūks, kurš tiks izmantots, lai\n"
+"vērtu hipersaites un attēlotu palīdzības saturu."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Mail Reader"
@@ -891,8 +891,8 @@ msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Vēlamais Pasta Lasītājs, kuru izmantot, lai rakstot\n"
-"e-pastus, kad uzklikšķiniet uz e-pasta adreses."
+"Vēlamais Pasta Lasītājs, kurš tiks izmantots, lai rakstītu\n"
+"e-pastus, kad Jūs uzklikšķinat uz e-pasta adreses."
 
 #.
 #. Utilities
@@ -903,19 +903,19 @@ msgstr "Sīkprogrammas"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:211
 msgid "Terminal Emulator"
-msgstr "Termināļa Emulātors"
+msgstr "Termināļa Emulators"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:219
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"Vēlamais Termināļa Emulatolrs, kuru izmantot, lai izpildītu\n"
-"kommandas, kurām nepieciešama CLI vide."
+"Vēlamais Termināļa Emulators, kuru izmantot, lai izpildītu\n"
+"komandas, kurām nepieciešama CLI vide."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
 msgid "Failed to open the documentation browser."
-msgstr "Neizdevās atvērt dokumentu pārlūku."
+msgstr "Neizdevās atvērt dokumentācijas pārlūku."
 
 #: ../exo-helper/exo-helper-chooser.c:184
 #: ../exo-helper/exo-helper-chooser.c:191
@@ -928,11 +928,11 @@ msgstr "Lietotņu Izvēlētāja Poga"
 
 #: ../exo-helper/exo-helper-chooser.c:334
 msgid "No application selected"
-msgstr "Nav izvēlēta neviena lietotne"
+msgstr "Nav norādīta neviena lietotne"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
-msgstr "Neizdevās uzstādīt noklusēto Tīkla Pārlūku"
+msgstr "Neizdevās uzstādīt noklusēto Tīmekļa Pārlūku"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
@@ -949,7 +949,7 @@ msgstr "Norādiet lietotni"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
-msgstr "Norādiet Tīkla Pārlūku"
+msgstr "Norādiet Tīmekļa Pārlūku"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
@@ -965,7 +965,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Norādiet lietotni, kuru vēlaties izmantot,\n"
-"kā noklusēto Tīkla Pārlūku:"
+"kā noklusēto Tīmekļa Pārlūku:"
 
 #: ../exo-helper/exo-helper-chooser.c:543
 msgid ""
@@ -985,7 +985,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
-msgstr "Pārlūkots failu sistēmu, lai norādītu kommandu."
+msgstr "Pārlūkot faila sistēmu, lai norādītu izmantojamo komandu."
 
 #: ../exo-helper/exo-helper-chooser.c:793
 msgid "_Other..."
@@ -1004,7 +1004,7 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Lūdzu norādiet savu vēlamo Tīkla\n"
+"Lūdzu norādiet savu vēlamo Tīmekļa\n"
 "Pārlūku un nospiežiet OK, lai turpinātu."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
@@ -1025,7 +1025,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
-msgstr "Nav norādīta kommanda"
+msgstr "Nav norādīta komanda"
 
 #: ../exo-helper/exo-helper.c:740
 msgid "Failed to open helpers.rc for writing"
@@ -1037,11 +1037,11 @@ msgstr "Neizdevās palaist exo-preferred-applications"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
-msgstr "Vēlamā Lietotnes"
+msgstr "Vēlamās Lietotnes"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Vēlamās Lietotnes (Tīkla Pārlūks, Pasta Lasītājs un Termināļa Emulators)"
+msgstr "Vēlamās Lietotnes (Tīmekļa Pārlūks, Pasta Lasītājs un Termināļa Emulators)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
@@ -1049,7 +1049,7 @@ msgstr "Xfce 4 Vēlamās Lietotnes"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
-msgstr "Xfce Terminal"
+msgstr "Xfce Termināls"
 
 #: ../exo-helper/helpers/aterm.desktop.in.in.h:1
 msgid "aterm"
@@ -1173,7 +1173,7 @@ msgstr "Nezināma kļūda"
 #: ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
-msgstr "Ierīce \"%s\" netika atrasta sistēmas ierīču tabulā"
+msgstr "Ierīce \"%s\" netika atrasta failu sistēmas ierīču tabulā"
 
 #. definitely not a device that we're able to mount, eject or unmount
 #: ../exo-mount/exo-mount-hal.c:224
@@ -1186,19 +1186,19 @@ msgstr "Norādīta ierīce \"%s\" nav sējums vai datu ierīce"
 #: ../exo-mount/exo-mount-hal.c:595
 #, c-format
 msgid "You are not privileged to eject the volume \"%s\""
-msgstr "Jums, nav tiesību, lai veiktu sējuma \"%s\" izstumšanu"
+msgstr "Jums, nav tiesību veikt sējuma \"%s\" izgrūšanu"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:600
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being ejected"
-msgstr "Lietotne neļauj izstumt sējumu \"%s\" "
+msgstr "Lietotne neļauj izgrūst sējumu \"%s\" "
 
 #. TRANSLATORS: User tried to mount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:831
 #, c-format
 msgid "You are not privileged to mount the volume \"%s\""
-msgstr "Jums nav tiesību veikt atmontēšanu sējumam \"%s\""
+msgstr "Jums nav tiesību veikt sējuma \"%s\" montēšanu"
 
 #: ../exo-mount/exo-mount-hal.c:846
 msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
@@ -1212,7 +1212,7 @@ msgstr "Audio CD nevar montēt, izmantojiet Xfmedia, lai atskaņotu audio celiņ
 #: ../exo-mount/exo-mount-hal.c:942
 #, c-format
 msgid "You are not privileged to unmount the volume \"%s\""
-msgstr "Jums nav tiesības veikt atmontēsanu uz sējumu \"%s\""
+msgstr "Jums nav tiesības veikt  sējuma \"%s\" atmontēšanu"
 
 #. TRANSLATORS: An application is blocking a volume from being unmounted.
 #: ../exo-mount/exo-mount-hal.c:947
@@ -1248,7 +1248,7 @@ msgstr "Montēt pēc ierīces faila"
 
 #: ../exo-mount/main.c:73
 msgid "Don't show any dialogs"
-msgstr "Nerādit nekādus dialogus"
+msgstr "Nerādīt nekādus dialogus"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:138
@@ -1282,7 +1282,7 @@ msgstr "Neizdevās izgrūst \"%s\""
 #: ../exo-mount/main.c:332
 #, c-format
 msgid "Failed to unmount \"%s\""
-msgstr "Neizdevas atmontēt \"%s\""
+msgstr "Neizdevās atmontēt \"%s\""
 
 #: ../exo-mount/main.c:334
 #, c-format
@@ -1312,12 +1312,12 @@ msgstr "Ierīce \"%s\" tiek izgrūsta. Tas var aizņemt nedaudz laika."
 #. read-only, just unmounting
 #: ../exo-mount-notify/main.c:230
 msgid "Unmounting device"
-msgstr "Atmontē ierīci"
+msgstr "Atmontēju ierīci"
 
 #: ../exo-mount-notify/main.c:231
 #, c-format
 msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Sistēma veic atmontēšanu ierīcie \"%s\". Lūdzu, nenoņemiet datu nesēju vai neatvienojiet dzini."
+msgstr "Sistēma veic atmontēšanu ierīcei \"%s\". Lūdzu, nenoņemiet datu nesēju vai neatvienojiet dzini."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:238
