--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
+
+	* ro.po: Update Romanian translation by Mişu Moldovan <dumol@gnome.ro>
+
 2007-11-15	Mike Massonnet <mmassonnet@xfce.org>
 
 	* ur.po, LINGUAS: Add Urdu translation by ﻢﺤﻣﺩ ﻊﻠﻳ ﺎﻠﻤﻜﻳ
