fr.po: Rename name in .desktop files with consistency
(Old svn revision: 26328)

--- a/po/fr.po
+++ b/po/fr.po
@@ -1047,7 +1047,7 @@ msgstr "Applications favorites (navigateur Web, client de messagerie et émulate
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
-msgstr "Applications favorites Xfce 4"
+msgstr "Xfce 4 Applications favorites"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
