--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
 
+	* fr.po: Rename the name in the desktop entry files with consistency
+
+2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
+
 	* ro.po: Update Romanian translation by Mişu Moldovan <dumol@gnome.ro>
 
 2007-11-15	Mike Massonnet <mmassonnet@xfce.org>
