2007-12-02	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.4 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* docs/reference/Makefile.am: Fix dist building.




(Old svn revision: 26415)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-02	Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.3.4 ===
+	* NEWS, configure.in.in: Bump version.
+	* THANKS: Update translator credits.
+	* po/*.po: Update Project-Id-Version.
+	* docs/reference/Makefile.am: Fix dist building.
+
 2007-07-20	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-mount-point.c: Fix build on Solaris.
