--- a/THANKS
+++ b/THANKS
@@ -16,6 +16,9 @@ Translators (sorted by language):
 ----------------------------------
 These people have translated libexo to foreign languages.
 
+ Mohamed Magdy <alnokta@yahoo.com>
+  * ar translations
+
  Alexander Nyakhaychyk <nyakhaychyk@gmail.com>
   * be translations
 
@@ -35,6 +38,9 @@ These people have translated libexo to foreign languages.
   * de translations
 
  Fabian Nowak <timystery@arcor.de>
+  * de translations
+
+ Nico Schümann <nico@prog.nico22.de>
   * de translations
 
  Sonam Pelden <sonaa_peldn@yahoo.com>
@@ -61,6 +67,9 @@ These people have translated libexo to foreign languages.
  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
   * fi translations
 
+ Mike Massonnet <mmassonnet@gmail.com>
+  * fr translations
+
  Maximilian Schleiss <maxschleiss@bluewin.ch>
   * fr translations
 
@@ -71,6 +80,9 @@ These people have translated libexo to foreign languages.
   * gl translations
 
  Dotan Kamber <kamberd@yahoo.com>
+  * he translations
+
+ Yuval Tanny <tanai@int.gov.il>
   * he translations
 
  Szervác Attila <sas@321.hu>
@@ -88,8 +100,14 @@ These people have translated libexo to foreign languages.
  mantas <mantaz@users.sourceforge.net>
   * lt translations
 
+ Rihards Priedītis <rprieditis@inbox.lv>
+  * lv translations
+
  Pavle Jonoski <jonoski.pavle@gmail.com>
   * mk translations
+
+ Terje Uriansrud <ter@operamail.com>
+  * nb_NO translations
 
  Stephan Arts <psyBSD@gmail.com>
   * nl translations
@@ -106,8 +124,17 @@ These people have translated libexo to foreign languages.
  Adriano Winter Bess <awbess@gmail.com>
   * pt_BR translations
 
+ Pablo Lerina <pabloalr@gmail.com>
+  * pt_BR translations
+
+ Og Maciel <ogmaciel@gnome.org>
+  * pt_BR translations
+
  Joao Pedrosa <joaopedrosa@gmail.com>
   * pt_BR translations
+
+ Nuno Miguel <nunis@netcabo.pt>
+  * pt_PT translations
 
  Mişu Moldovan <dumol@gnome.ro>
   * ro translations
@@ -118,8 +145,17 @@ These people have translated libexo to foreign languages.
  Maxim Zenin <webmechanics@gmail.com>
   * ru translations
 
+ Besnik Bleta <besnik@programeshqip.org>
+  * sq translations
+
  Alexander Toresson <alexander.toresson@gmail.com>
   * sv translations
+
+ Muhammad Ali Makki <makki.ma@gmai.com>
+  * ur translations
+
+ Hydonsingore Cia <hydonsingore@educities.edu.tw>
+  * zh_TW translations
 
 
 
