--- a/po/pa.po
+++ b/po/pa.po
@@ -6,7 +6,7 @@
 # A S Alam <aalam@users.sf.net>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: pa\n"
+"Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
 "PO-Revision-Date: 2007-02-23 21:39+0530\n"
