--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-02  Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.3.4 ===
+	* *.po: Update Project-Id-Version.
+
 2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Rename the name in the desktop entry files with consistency
@@ -9,19 +14,20 @@
 2007-11-15	Mike Massonnet <mmassonnet@xfce.org>
 
 	* ur.po, LINGUAS: Add Urdu translation by ﻢﺤﻣﺩ ﻊﻠﻳ ﺎﻠﻤﻜﻳ
-	makki.ma@gmail.com
+	  makki.ma@gmail.com
 
 2007-11-11  Mike Massonnet <mmassonnet@xfce.org>
 
 	* lv.po: Update translations by RPrieditis <RPrieditis@inbox.lv>
 
-2007-11-05	Mike Massonnet <mmassonnet@xfce.org>
+2007-11-05  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Update translation
 
 2007-11-03 Og Maciel <ogmaciel@gnome.org>
 
-    * pt_BR: Updated Brazilian Portuguese translation by Og Maciel <ogmaciel@gnome.org>
+	* pt_BR: Updated Brazilian Portuguese translation by Og Maciel
+	  <ogmaciel@gnome.org>
 
 2007-10-29  Stephan Arts <stephan@xfce.org>
 
@@ -42,7 +48,7 @@
 2007-08-29  Mike Massonnet <mmassonnet@xfce.org>
 
 	* nb_NO.po: Update translations
-	by Terje Uriansrud <ter@operamail.com>
+	  by Terje Uriansrud <ter@operamail.com>
 
 2007-07-14  Daichi Kawahata <daichi@xfce.org>
 
@@ -50,8 +56,8 @@
 
 2007-06-27  Maximilian Schleiss <maximilian@xfce.org>
 
-	* pt_PTpo: European Portuguese translation added
-	by Nuno Miguel <nunis@netcabo.pt>
+	* pt_PT.po: European Portuguese translation added
+	  by Nuno Miguel <nunis@netcabo.pt>
 
 2007-06-20  Piarres Beobide <pi@beobide.net>
 
@@ -60,17 +66,17 @@
 2007-06-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB: British English translation updated
-	by Jeff Bailes <thepizzaking@gmail.com>
+	  by Jeff Bailes <thepizzaking@gmail.com>
 
 2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
-	by Pablo Lerina <pabloalr@gmail.com>
+	  by Pablo Lerina <pabloalr@gmail.com>
 
 2007-06-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
-	by Pablo Lerina <pabloalr@gmail.com>
+	  by Pablo Lerina <pabloalr@gmail.com>
 
 2007-05-20  Benedikt Meurer <benny@xfce.org>
 
@@ -80,7 +86,7 @@
 2007-05-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Added the Norwegian Bokmal translation
-	by Terje Uriansrud <ter@operamail.com>
+	  by Terje Uriansrud <ter@operamail.com>
 
 2007-04-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
@@ -109,12 +115,12 @@
 2007-03-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Minor fixes to the German translation
-	by Nico Schümann <nico@prog.nico22.de>
+	  by Nico Schümann <nico@prog.nico22.de>
 
 2007-03-27  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: Updated the British translation
-	by Jeff Bailes <thepizzaking@gmail.com>
+	  by Jeff Bailes <thepizzaking@gmail.com>
 
 2007-03-25  Daichi Kawahata <daichi@xfce.org>
 
@@ -124,12 +130,12 @@
 2007-03-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Updated the German translation
-	by Nico Schümann <nico@prog.nico22.de>
+	  by Nico Schümann <nico@prog.nico22.de>
 
 2007-02-22  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Brought some style in the German translation by
-	Nico Schümann <nico@prog.nico22.de>
+	  Nico Schümann <nico@prog.nico22.de>
 
 2007-02-22  Piarres Beobide <pi@beobide.net>
 
@@ -145,8 +151,8 @@
 
 2007-02-10  Maximilian Schleiss <maximilian@xfce.org>
 
-	* Modified LINGUAS files to include Albanian language,
-	verified all the LINGUAS files.
+	* LINGUAS: Modified LINGUAS files to include Albanian language,
+	  verified all the LINGUAS files.
 
 2007-02-08  Mohamed Magdy <mohamed.m.k@gmail.com>
 
@@ -160,7 +166,7 @@
 2007-01-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Added the Albanian translation by
-	Besnik Bleta <besnik@programeshqip.org>
+	  Besnik Bleta <besnik@programeshqip.org>
 
 2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
