--- a/po/eu.po
+++ b/po/eu.po
@@ -6,7 +6,7 @@
 # Piarres Beobide <pi@beobide.net>, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: eu\n"
+"Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
 "PO-Revision-Date: 2007-06-20 22:44+0200\n"
