--- a/po/ur.po
+++ b/po/ur.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo-0.3\n"
+"Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
 "PO-Revision-Date: 2007-10-28 19:39+0200\n"
