2007-12-02	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Post-release version bump.




(Old svn revision: 26418)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-02	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in: Post-release version bump.
+
+2007-12-02	Benedikt Meurer <benny@xfce.org>
+
 	* === Released 0.3.4 ===
 	* NEWS, configure.in.in: Bump version.
 	* THANKS: Update translator credits.
