Spanish translations branch updates and German translations trunk updates
(Old svn revision: 26428)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,6 +3,11 @@
 	* === Released 0.3.4 ===
 	* *.po: Update Project-Id-Version.
 
+2007-12-02  Maximilian Schleiss <maximilian@xfce.org>
+
+	* de.po: German translation update
+	by Fabian Nowak <timstery@arcor.de>
+
 2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Rename the name in the desktop entry files with consistency
@@ -16,7 +21,7 @@
 	* ur.po, LINGUAS: Add Urdu translation by ﻢﺤﻣﺩ ﻊﻠﻳ ﺎﻠﻤﻜﻳ
 	  makki.ma@gmail.com
 
-2007-11-11  Mike Massonnet <mmassonnet@xfce.org>
+2007-11-11	Mike Massonnet <mmassonnet@xfce.org>
 
 	* lv.po: Update translations by RPrieditis <RPrieditis@inbox.lv>
 
@@ -24,10 +29,10 @@
 
 	* fr.po: Update translation
 
-2007-11-03 Og Maciel <ogmaciel@gnome.org>
+2007-11-03	Og Maciel <ogmaciel@gnome.org>
 
-	* pt_BR: Updated Brazilian Portuguese translation by Og Maciel
-	  <ogmaciel@gnome.org>
+	* pt_BR: Updated Brazilian Portuguese translation
+	by Og Maciel <ogmaciel@gnome.org>
 
 2007-10-29  Stephan Arts <stephan@xfce.org>
 
